language/tools/move-unit-test/tests/test_sources/cross_module_aborts.exp
Running Move unit tests
[ FAIL    ] 0x1::B::failing_test
[ PASS    ] 0x1::M::dummy_test

Test failures:

Failures in 0x1::B:

┌── failing_test ──────
│ error[E11001]: test failure
│   ┌─ tests/test_sources/cross_module_aborts.move:5:9
│   │
│ 4 │     public fun this_aborts() {
│   │                ----------- In this function in 0x1::M
│ 5 │         abort 0
│   │         ^^^^^^^ Test was not expected to abort but it aborted with 0 here
│ 
│ 
└──────────────────

Test result: FAILED. Total tests: 2; passed: 1; failed: 1
